# shuttle

./: Cargo.toml  README.md  Shuttle.toml  main.rs  main.rs~
.github/workflows/: deploy-gai.yml  deploy.yml  deploy2.yml~  rust.yml
src/: main.rs
