[package]
name = "shuttle-app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
shuttle-axum = "0.52.0"
shuttle-runtime = "0.52.0"
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = "0.11.25"
serde_json = "1.0.117"
base64 = "0.22.1"
regex = "1.10.4"

[[bin]]
name = "shuttle-app"
path = "main.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1
